--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 
 <mat-sidenav-container>
   <mat-sidenav
+    fixedInViewport
+    [fixedTopGap]="(isMobile$ | async) ? 97 : 57"
     [mode]="(isMobile$ | async) ? 'over' : 'side'"
     [opened]="isOpened$ | async"
     ><app-drawer></app-drawer>
