--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'mixins';
 
 html,
 body {
@@ -12,8 +13,11 @@ body {
 
 .container {
   margin: 0 auto;
-  padding: 0 24px;
+  padding: 80px 24px 0;
   max-width: 1024px;
+  @include sp {
+    padding: 120px 24px 0;
+  }
 }
 
 img {
@@ -24,7 +28,6 @@ img {
   display: grid;
   gap: 24px;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  padding: 24px;
   text-align: center;
 }
 
@@ -67,5 +70,12 @@ img {
     width: 160px;
     height: 160px;
     margin: 0 auto;
+  }
+  &__grid {
+    display: grid;
+    gap: 24px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    text-align: center;
+    padding: 24px;
   }
 }
