--- a/src/app/create/form/form.component.scss
+++ b/src/app/create/form/form.component.scss
@@ -1,16 +1,27 @@
+@import 'mixins';
+
+.form-container {
+  margin: 0 auto;
+  padding: 80px 0 0;
+  max-width: 700px;
+}
+
 .heading {
   text-align: center;
   border-bottom: 1px solid black;
 }
 
 .common {
-  padding: 16px;
+  padding: 40px;
   &__content {
     display: block;
     margin: 0 auto;
   }
   &__chip-list {
     width: 100%;
+  }
+  @include sp {
+    padding: 16px;
   }
 }
 
@@ -31,5 +42,20 @@
   text-align: center;
   &__btn {
     text-align: center;
+  }
+}
+
+.sample {
+  background-color: rgb(245, 245, 245);
+  cursor: pointer;
+  text-align: center;
+  padding: 36px;
+  border-width: 1px;
+  border-style: dashed;
+  border-color: rgb(204, 204, 204);
+  font-size: 13px;
+  margin-bottom: 24px;
+  p {
+    margin: 0;
   }
 }
