--- a/src/app/create/form/form.component.html
+++ b/src/app/create/form/form.component.html
@@ -7,8 +7,8 @@
   </ng-template>
 
   <form [formGroup]="form" (ngSubmit)="submit()">
-    <div class="common">
-      <mat-form-field class="common__content" appearance="fill">
+    <div class="form-wrapper">
+      <mat-form-field class="form-wrapper__content" appearance="outline">
         <mat-label>サービス名</mat-label>
         <input
           matInput
@@ -22,19 +22,6 @@
         >
         <mat-error *ngIf="nameControl.hasError('maxlength')"
           >長すぎます</mat-error
-        >
-      </mat-form-field>
-      <mat-form-field class="common__content" appearance="fill">
-        <mat-label>サービスのイメージ画像</mat-label>
-        <input
-          matInput
-          placeholder="画像のURLを貼ってください"
-          autocomplete="off"
-          formControlName="image"
-          required
-        />
-        <mat-error *ngIf="imageControl.hasError('required')"
-          >必須入力です</mat-error
         >
       </mat-form-field>
 
@@ -54,7 +41,7 @@
         <p>クリックしてファイルをアップロードしてください</p>
       </div>
 
-      <mat-form-field class="common__content" appearance="fill">
+      <mat-form-field class="form-wrapper__content" appearance="fill">
         <mat-label>ポイント（通常時）</mat-label>
         <input
           matInput
@@ -69,7 +56,7 @@
         >
       </mat-form-field>
       <mat-form-field
-        class="common__content"
+        class="form-wrapper__content"
         hintLabel="(例) ○○カード利用時+1%"
         appearance="fill"
       >
@@ -82,7 +69,7 @@
         ></textarea>
       </mat-form-field>
       <mat-form-field
-        class="common__content"
+        class="form-wrapper__content"
         hintLabel="(例) 最終利用日から○○年間"
         appearance="fill"
       >
@@ -90,7 +77,7 @@
         <textarea matInput formControlName="expiration" required></textarea>
       </mat-form-field>
 
-      <mat-form-field class="common__chip-list">
+      <mat-form-field class="form-wrapper__chip-list">
         <mat-label>使えるお店</mat-label>
         <mat-chip-list #chipList aria-label="Store selection">
           <mat-chip
@@ -126,7 +113,7 @@
       <h2>QRcodeにしかない作成機能</h2>
       <ng-container [ngSwitch]="type">
         <ng-container *ngSwitchCase="'qrCode'">
-          <mat-form-field class="common__chip-list">
+          <mat-form-field class="form-wrapper__chip-list">
             <mat-label>チャージ方法</mat-label>
             <mat-chip-list #chipList aria-label="Fruit selection">
               <mat-chip
@@ -164,7 +151,7 @@
             </mat-radio-group>
           </div>
 
-          <mat-form-field class="common__content" appearance="fill">
+          <mat-form-field class="form-wrapper__content" appearance="fill">
             <mat-label>利用可能なクレジットカード</mat-label>
             <textarea
               matInput
