--- a/src/app/code-card/code-card/code-card.component.html
+++ b/src/app/code-card/code-card/code-card.component.html
@@ -4,7 +4,7 @@
       <a class="card__trigger" routerLink="/code-detail/{{ codeCard.cardId }}">
         <div
           class="card__cover"
-          [style.background-image]="'url(' + codeCard.image + ')'"
+          [style.background-image]="'url(' + codeCard.imageURL + ')'"
         ></div>
         <p class="card__name">{{ codeCard.name }}</p>
       </a>
