--- a/src/app/code-detail/code-detail/code-detail.component.html
+++ b/src/app/code-detail/code-detail/code-detail.component.html
@@ -3,7 +3,7 @@
     <div class="card">
       <figure
         class="card__cover"
-        [style.background-image]="'url(' + codeCard.image + ')'"
+        [style.background-image]="'url(' + codeCard.imageURL + ')'"
       ></figure>
     </div>
     <div class="detail">
