--- a/src/app/create/form/form.component.html
+++ b/src/app/create/form/form.component.html
@@ -8,7 +8,22 @@
 
   <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="form-wrapper">
-      <mat-form-field class="form-wrapper__content" appearance="outline">
+      <div>
+        <img *ngIf="imageURL" [src]="imageURL" alt="" />
+      </div>
+      <div class="upload" (click)="imageInput.click()">
+        <input
+          type="file"
+          style="display: none;"
+          accept=".png, .img, .jpeg"
+          (change)="uploadImage($event)"
+          #imageInput
+          required
+        />
+        <mat-icon>insert_photo</mat-icon>
+        <p>クリックしてファイルをアップロードしてください</p>
+      </div>
+      <mat-form-field class="form-wrapper__content" appearance="fill">
         <mat-label>サービス名</mat-label>
         <input
           matInput
@@ -25,26 +40,11 @@
         >
       </mat-form-field>
 
-      <div>
-        <img *ngIf="imageURL" [src]="imageURL" alt="" />
-      </div>
-
-      <div class="sample" (click)="imageInput.click()">
-        <input
-          type="file"
-          style="display: none;"
-          accept=".png, .img, .jpeg"
-          (change)="uploadImage($event)"
-          #imageInput
-        />
-        <mat-icon>insert_photo</mat-icon>
-        <p>クリックしてファイルをアップロードしてください</p>
-      </div>
-
       <mat-form-field class="form-wrapper__content" appearance="fill">
         <mat-label>ポイント（通常時）</mat-label>
         <input
           matInput
+          type="number"
           placeholder="数字を入力してください"
           autocomplete="off"
           formControlName="point"
@@ -55,26 +55,32 @@
           >必須入力です</mat-error
         >
       </mat-form-field>
-      <mat-form-field
-        class="form-wrapper__content"
-        hintLabel="(例) ○○カード利用時+1%"
-        appearance="fill"
-      >
+      <mat-form-field class="form-wrapper__content" appearance="fill">
         <mat-label>ポイント / 追加情報</mat-label>
         <textarea
           matInput
-          placeholder="ポイントの追加情報がある場合は入力してください"
-          autocomplete="off"
+          placeholder="例）前月決済回数50回以上で+0.5%"
           formControlName="addPoint"
+          matTextareaAutosize
+          [matAutosizeMinRows]="4"
         ></textarea>
+        <mat-hint align="end"
+          >{{ addPointControl.value.length }} / 1000</mat-hint
+        >
       </mat-form-field>
-      <mat-form-field
-        class="form-wrapper__content"
-        hintLabel="(例) 最終利用日から○○年間"
-        appearance="fill"
-      >
+      <mat-form-field class="form-wrapper__content" appearance="fill">
         <mat-label>残高やポイントの有効期限</mat-label>
-        <textarea matInput formControlName="expiration" required></textarea>
+        <textarea
+          matInput
+          placeholder="例) 最終利用日から○○年間"
+          formControlName="expiration"
+          matTextareaAutosize
+          [matAutosizeMinRows]="4"
+          required
+        ></textarea>
+        <mat-hint align="end"
+          >{{ expirationControl.value.length }} / 1000</mat-hint
+        >
       </mat-form-field>
 
       <mat-form-field class="form-wrapper__chip-list">
