--- a/src/app/create/form/form.component.html
+++ b/src/app/create/form/form.component.html
@@ -119,6 +119,20 @@
       <h2>QRcodeにしかない作成機能</h2>
       <ng-container [ngSwitch]="type">
         <ng-container *ngSwitchCase="'qrCode'">
+          <mat-form-field class="form-wrapper__content" appearance="outline">
+            <mat-label>精算方法</mat-label>
+            <mat-select formControlName="payment" multiple>
+              <mat-option
+                *ngFor="let payment of paymentList"
+                [value]="payment"
+                >{{ payment }}</mat-option
+              >
+            </mat-select>
+            <mat-error *ngIf="paymentControl.hasError('required')"
+              >必須入力です</mat-error
+            >
+          </mat-form-field>
+
           <mat-form-field class="form-wrapper__chip-list">
             <mat-label>チャージ方法</mat-label>
             <mat-chip-list #chipList aria-label="Fruit selection">
