--- a/src/app/create/form/form.component.html
+++ b/src/app/create/form/form.component.html
@@ -132,7 +132,6 @@
               >必須入力です</mat-error
             >
           </mat-form-field>
-
           <mat-form-field class="form-wrapper__chip-list">
             <mat-label>チャージ方法</mat-label>
             <mat-chip-list #chipList aria-label="Fruit selection">
@@ -171,14 +170,16 @@
             </mat-radio-group>
           </div>
 
-          <mat-form-field class="form-wrapper__content" appearance="fill">
+          <mat-form-field class="form-wrapper__content" appearance="outline">
             <mat-label>利用可能なクレジットカード</mat-label>
-            <textarea
-              matInput
-              autocomplete="off"
-              formControlName="availableCredit"
-              required
-            ></textarea>
+            <mat-select formControlName="availableCredit" multiple>
+              <mat-option *ngFor="let credit of creditList" [value]="credit">{{
+                credit
+              }}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="creditControl.hasError('required')"
+              >必須入力です</mat-error
+            >
           </mat-form-field>
 
           <div class="qr-code">
