--- a/src/app/create/form/form.component.html
+++ b/src/app/create/form/form.component.html
@@ -6,7 +6,7 @@
     <h1 class="heading">カードを作成する</h1>
   </ng-template>
 
-  <form [formGroup]="form" (ngSubmit)="submit()">
+  <form [formGroup]="form" (ngSubmit)="submit(type)">
     <div class="form-wrapper">
       <div>
         <img *ngIf="imageURL" [src]="imageURL" alt="" />
@@ -116,72 +116,75 @@
         </mat-autocomplete>
       </mat-form-field>
 
-      <h2>QRcodeにしかない作成機能</h2>
+      <h2>
+        {{ type === 'qrCode' ? 'QRcode' : '電子マネー' }}にしかない作成機能
+      </h2>
+
+      <ng-container *ngIf="type === 'qrCode' || type === 'electron'">
+        <mat-form-field class="form-wrapper__content" appearance="outline">
+          <mat-label>精算方法</mat-label>
+          <mat-select formControlName="payment" multiple>
+            <mat-option *ngFor="let payment of paymentList" [value]="payment">{{
+              payment
+            }}</mat-option>
+          </mat-select>
+          <mat-error *ngIf="paymentControl.hasError('required')"
+            >必須入力です</mat-error
+          >
+        </mat-form-field>
+        <mat-form-field class="form-wrapper__chip-list">
+          <mat-label>チャージ方法</mat-label>
+          <mat-chip-list #chipList aria-label="Fruit selection">
+            <mat-chip
+              *ngFor="let chargePattern of chargePatterns"
+              [removable]="true"
+              (removed)="remove(chargePattern)"
+            >
+              {{ chargePattern }}
+              <mat-icon matChipRemove>cancel</mat-icon>
+            </mat-chip>
+            <input
+              placeholder="チャージ方法を選択してください"
+              formControlName="charge"
+              [matChipInputFor]="chipList"
+              [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+              [matChipInputAddOnBlur]="true"
+              (matChipInputTokenEnd)="add($event)"
+            />
+          </mat-chip-list>
+        </mat-form-field>
+
+        <div class="qr-code">
+          <mat-label class="qr-code__label">オートチャージ</mat-label>
+          <mat-radio-group
+            formControlName="autoCharge"
+            class="qr-code__radio-group"
+          >
+            <mat-radio-button
+              *ngFor="let autoChargePattern of autoChargePatterns"
+              [value]="autoChargePattern"
+              class="qr-code__radio-button"
+              required
+              >{{ autoChargePattern }}</mat-radio-button
+            >
+          </mat-radio-group>
+        </div>
+
+        <mat-form-field class="form-wrapper__content" appearance="outline">
+          <mat-label>利用可能なクレジットカード</mat-label>
+          <mat-select formControlName="availableCredit" multiple>
+            <mat-option *ngFor="let credit of creditList" [value]="credit">{{
+              credit
+            }}</mat-option>
+          </mat-select>
+          <mat-error *ngIf="creditControl.hasError('required')"
+            >必須入力です</mat-error
+          >
+        </mat-form-field>
+      </ng-container>
+
       <ng-container [ngSwitch]="type">
         <ng-container *ngSwitchCase="'qrCode'">
-          <mat-form-field class="form-wrapper__content" appearance="outline">
-            <mat-label>精算方法</mat-label>
-            <mat-select formControlName="payment" multiple>
-              <mat-option
-                *ngFor="let payment of paymentList"
-                [value]="payment"
-                >{{ payment }}</mat-option
-              >
-            </mat-select>
-            <mat-error *ngIf="paymentControl.hasError('required')"
-              >必須入力です</mat-error
-            >
-          </mat-form-field>
-          <mat-form-field class="form-wrapper__chip-list">
-            <mat-label>チャージ方法</mat-label>
-            <mat-chip-list #chipList aria-label="Fruit selection">
-              <mat-chip
-                *ngFor="let chargePattern of chargePatterns"
-                [removable]="true"
-                (removed)="remove(chargePattern)"
-              >
-                {{ chargePattern }}
-                <mat-icon matChipRemove>cancel</mat-icon>
-              </mat-chip>
-              <input
-                placeholder="チャージ方法を選択してください"
-                formControlName="charge"
-                [matChipInputFor]="chipList"
-                [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                [matChipInputAddOnBlur]="true"
-                (matChipInputTokenEnd)="add($event)"
-              />
-            </mat-chip-list>
-          </mat-form-field>
-
-          <div class="qr-code">
-            <mat-label class="qr-code__label">オートチャージ</mat-label>
-            <mat-radio-group
-              formControlName="autoCharge"
-              class="qr-code__radio-group"
-            >
-              <mat-radio-button
-                *ngFor="let autoChargePattern of autoChargePatterns"
-                [value]="autoChargePattern"
-                class="qr-code__radio-button"
-                required
-                >{{ autoChargePattern }}</mat-radio-button
-              >
-            </mat-radio-group>
-          </div>
-
-          <mat-form-field class="form-wrapper__content" appearance="outline">
-            <mat-label>利用可能なクレジットカード</mat-label>
-            <mat-select formControlName="availableCredit" multiple>
-              <mat-option *ngFor="let credit of creditList" [value]="credit">{{
-                credit
-              }}</mat-option>
-            </mat-select>
-            <mat-error *ngIf="creditControl.hasError('required')"
-              >必須入力です</mat-error
-            >
-          </mat-form-field>
-
           <div class="qr-code">
             <mat-label class="qr-code__label">個人間送金</mat-label>
             <mat-radio-group
@@ -213,7 +216,6 @@
             </mat-radio-group>
           </div>
         </ng-container>
-        <ng-container *ngSwitchDefault>output2</ng-container>
       </ng-container>
 
       <ng-container *ngIf="cardId; else defaultButton">
