--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,11 +35,29 @@
         [queryParams]="{ type: 'qrCode' }"
         mat-menu-item
       >
-        QRcode
+        モバイル決済
       </button>
-      <button mat-menu-item>クレジットカード</button>
-      <button mat-menu-item>交通系電子マネー</button>
-      <button mat-menu-item>ポイントカード</button>
+      <button
+        [routerLink]="['/create/form']"
+        [queryParams]="{ type: 'electron' }"
+        mat-menu-item
+      >
+        電子マネー
+      </button>
+      <button
+        [routerLink]="['/create/form']"
+        [queryParams]="{ type: 'cledit' }"
+        mat-menu-item
+      >
+        クレジットカード
+      </button>
+      <button
+        [routerLink]="['/create/form']"
+        [queryParams]="{ type: 'point' }"
+        mat-menu-item
+      >
+        ポイントカード
+      </button>
     </mat-menu>
 
     <div *ngIf="user.admin" class="admin">管理人</div>
