--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,11 +42,14 @@ img {
     background: center/cover;
     padding-bottom: 52.5%;
     box-sizing: border-box;
+    @include sp {
+      margin: 0;
+    }
   }
 }
 
 .detail {
-  margin: 0 40px;
+  padding: 40px;
   white-space: pre-wrap;
   &__title {
     display: flex;
@@ -59,6 +62,9 @@ img {
   &__store-link {
     display: inline-block;
     margin-left: 16px;
+  }
+  @include sp {
+    padding: 16px 0;
   }
 }
 
