fix(form): update関数修正 #66

--- a/src/app/create/form/form.component.html
+++ b/src/app/create/form/form.component.html
@@ -225,7 +225,7 @@
             mat-raised-button
             color="primary"
             type="button"
-            (click)="updateCard()"
+            (click)="updateCard(type)"
           >
             適用する
           </button>
