refactor(card.service): 型の修正とupdate関数修正 #66

--- a/src/app/electron-detail/electron-detail/electron-detail.component.html
+++ b/src/app/electron-detail/electron-detail/electron-detail.component.html
@@ -30,6 +30,8 @@
           </div>
         </div>
       </div>
+      <h2>精算方法</h2>
+      <p>{{ electronCard.payment }}</p>
       <h2>チャージ方法</h2>
       <p *ngFor="let chargeWay of electronCard.charge" class="detail__charge">
         {{ chargeWay }}
