--- a/src/app/code-detail/code-detail/code-detail.component.html
+++ b/src/app/code-detail/code-detail/code-detail.component.html
@@ -30,6 +30,8 @@
           </div>
         </div>
       </div>
+      <h2>精算方法</h2>
+      <p>{{ codeCard.payment }}</p>
       <h2>チャージ方法</h2>
       <p *ngFor="let chargeWay of codeCard.charge" class="detail__charge">
         {{ chargeWay }}
