--- a/src/app/code-detail/code-detail/code-detail.component.html
+++ b/src/app/code-detail/code-detail/code-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="codeCard$ | async as codeCard; else blank">
+<ng-container *ngIf="codeCard$ | async as codeCard; else blank">
   <div class="container">
     <div class="card">
       <figure
@@ -48,52 +48,52 @@
       <h2>出金</h2>
       <p>{{ codeCard.pullMoney }}</p>
     </div>
-    <div class="store" id="store">
-      <h2 class="store__title">使えるお店</h2>
-      <mat-tab-group mat-align-tabs="center">
-        <mat-tab label="実店舗">
-          <div class="store__grid">
-            <div
-              *ngFor="let store of codeCard.storeIds | idToStore: 'real'"
-              class="store__cover"
-            >
-              <img src="assets/images/{{ store.id }}.png" alt="実店舗の画像" />
-              <p>{{ store.name }}</p>
-            </div>
-          </div>
-        </mat-tab>
-        <mat-tab label="オンライン">
-          <div class="store__grid">
-            <div
-              *ngFor="let store of codeCard.storeIds | idToStore: 'online'"
-              class="store__cover"
-            >
-              <img
-                src="assets/images/online/{{ store.id }}.png"
-                alt="オンライン店舗の画像"
-              />
-              <p>{{ store.name }}</p>
-            </div>
-          </div>
-        </mat-tab>
-        <mat-tab label="請求書">
-          <div class="store__grid">
-            <div
-              *ngFor="let store of codeCard.storeIds | idToStore: 'invoice'"
-              class="store__cover"
-            >
-              <img
-                src="assets/images/invoice/{{ store.id }}.png"
-                alt="請求書の画像"
-              />
-              <p>{{ store.name }}</p>
-            </div>
-          </div>
-        </mat-tab>
-      </mat-tab-group>
-    </div>
   </div>
-</div>
+  <div class="store" id="store">
+    <h2 class="store__title">使えるお店</h2>
+    <mat-tab-group mat-align-tabs="center">
+      <mat-tab label="実店舗">
+        <div class="store__grid">
+          <div
+            *ngFor="let store of codeCard.storeIds | idToStore: 'real'"
+            class="store__cover"
+          >
+            <img src="assets/images/{{ store.id }}.png" alt="実店舗の画像" />
+            <p>{{ store.name }}</p>
+          </div>
+        </div>
+      </mat-tab>
+      <mat-tab label="オンライン">
+        <div class="store__grid">
+          <div
+            *ngFor="let store of codeCard.storeIds | idToStore: 'online'"
+            class="store__cover"
+          >
+            <img
+              src="assets/images/online/{{ store.id }}.png"
+              alt="オンライン店舗の画像"
+            />
+            <p>{{ store.name }}</p>
+          </div>
+        </div>
+      </mat-tab>
+      <mat-tab label="請求書">
+        <div class="store__grid">
+          <div
+            *ngFor="let store of codeCard.storeIds | idToStore: 'invoice'"
+            class="store__cover"
+          >
+            <img
+              src="assets/images/invoice/{{ store.id }}.png"
+              alt="請求書の画像"
+            />
+            <p>{{ store.name }}</p>
+          </div>
+        </div>
+      </mat-tab>
+    </mat-tab-group>
+  </div>
+</ng-container>
 
 <ng-template #blank>
   カードの詳細ページが見つかりませんでした。
