--- a/src/app/electron-detail/electron-detail/electron-detail.component.html
+++ b/src/app/electron-detail/electron-detail/electron-detail.component.html
@@ -56,8 +56,14 @@
             *ngFor="let store of electronCard.storeIds | idToStore: 'real'"
             class="store__cover"
           >
-            <img src="assets/images/{{ store.id }}.png" alt="実店舗の画像" />
-            <p>{{ store.name }}</p>
+            <div class="store__img-wrapper">
+              <img
+                class="store__img"
+                src="assets/images/{{ store.id }}.png"
+                alt="実店舗の画像"
+              />
+            </div>
+            <span class="store__name">{{ store.name }}</span>
           </div>
         </div>
       </mat-tab>
@@ -67,11 +73,14 @@
             *ngFor="let store of electronCard.storeIds | idToStore: 'online'"
             class="store__cover"
           >
-            <img
-              src="assets/images/online/{{ store.id }}.png"
-              alt="オンライン店舗の画像"
-            />
-            <p>{{ store.name }}</p>
+            <div class="store__img-wrapper">
+              <img
+                class="store__img"
+                src="assets/images/{{ store.id }}.png"
+                alt="オンライン店舗の画像"
+              />
+            </div>
+            <span class="store__name">{{ store.name }}</span>
           </div>
         </div>
       </mat-tab>
@@ -81,11 +90,14 @@
             *ngFor="let store of electronCard.storeIds | idToStore: 'invoice'"
             class="store__cover"
           >
-            <img
-              src="assets/images/invoice/{{ store.id }}.png"
-              alt="請求書の画像"
-            />
-            <p>{{ store.name }}</p>
+            <div class="store__img-wrapper">
+              <img
+                class="store__img"
+                src="assets/images/{{ store.id }}.png"
+                alt="請求書の画像"
+              />
+            </div>
+            <span class="store__name">{{ store.name }}</span>
           </div>
         </div>
       </mat-tab>
