--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,7 @@ body {
 
 img {
   max-width: 100%;
+  max-height: 100%;
 }
 
 .grid {
@@ -70,9 +71,21 @@ img {
     text-align: center;
   }
   &__cover {
-    width: 160px;
-    height: 160px;
     margin: 0 auto;
+  }
+  &__img-wrapper {
+    width: 100%;
+    height: 48px;
+    margin: 0 auto;
+  }
+  &__img {
+    height: inherit;
+    object-fit: scale-down;
+  }
+  &__name {
+    display: block;
+    margin-top: 8px;
+    font-size: 10px;
   }
   &__grid {
     display: grid;
@@ -80,5 +93,10 @@ img {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     text-align: center;
     padding: 24px;
+  }
+  @include sp {
+    &__grid {
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 }
