--- a/src/app/code-detail/code-detail/code-detail.component.html
+++ b/src/app/code-detail/code-detail/code-detail.component.html
@@ -57,21 +57,25 @@
       <mat-tab label="実店舗">
         <div class="store__grid">
           <div
-            *ngFor="let store of codeCard.storeIds | idToStore: 'real'"
+            *ngFor="let category of codeCard.storeIds | idToStore: 'real'"
             class="store__cover"
           >
-            <div class="store__img-wrapper">
-              <img
-                class="store__img"
-                src="assets/images/{{ store.id }}.png"
-                alt="実店舗の画像"
-              />
+            <h3>{{ category.title }}</h3>
+            <div *ngFor="let item of category.items">
+              <p>{{ item }}</p>
+              <!-- <div class="store__img-wrapper">
+                <img
+                  class="store__img"
+                  src="assets/images/{{ item.id }}.png"
+                  alt="実店舗の画像"
+                />
+              </div>
+              <span class="store__name">{{ item.name }}</span> -->
             </div>
-            <span class="store__name">{{ store.name }}</span>
           </div>
         </div>
       </mat-tab>
-      <mat-tab label="オンライン">
+      <!-- <mat-tab label="オンライン">
         <div class="store__grid">
           <div
             *ngFor="let store of codeCard.storeIds | idToStore: 'online'"
@@ -104,7 +108,7 @@
             <span class="store__name">{{ store.name }}</span>
           </div>
         </div>
-      </mat-tab>
+      </mat-tab> -->
     </mat-tab-group>
   </div>
 </ng-container>
