--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,6 +73,28 @@ img {
   &__cover {
     margin: 0 auto;
   }
+  &__category {
+    position: relative;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin: 40px 24px 24px;
+  }
+  &__category::before {
+    content: '';
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: rgba(0, 0, 0, 0.38);
+  }
+  &__category-label {
+    z-index: 1;
+    padding: 0 24px;
+    background-color: #fafafa;
+  }
   &__img-wrapper {
     width: 100%;
     height: 48px;
