--- a/src/app/code-detail/code-detail/code-detail.component.html
+++ b/src/app/code-detail/code-detail/code-detail.component.html
@@ -55,60 +55,71 @@
     <h2 class="store__title">使えるお店</h2>
     <mat-tab-group mat-align-tabs="center">
       <mat-tab label="実店舗">
-        <div class="store__grid">
-          <div
-            *ngFor="let category of codeCard.storeIds | idToStore: 'real'"
-            class="store__cover"
-          >
-            <h3>{{ category.title }}</h3>
+        <div
+          *ngFor="let category of codeCard.storeIds | idToStore: 'real'"
+          class="store__cover"
+        >
+          <h3 class="store__category">
+            <span class="store__category-label">{{ category.title }}</span>
+          </h3>
+          <div class="store__grid">
             <div *ngFor="let item of category.items">
-              <p>{{ item }}</p>
-              <!-- <div class="store__img-wrapper">
+              <div class="store__img-wrapper">
                 <img
                   class="store__img"
                   src="assets/images/{{ item.id }}.png"
                   alt="実店舗の画像"
                 />
               </div>
-              <span class="store__name">{{ item.name }}</span> -->
+              <span class="store__name">{{ item.name }}</span>
             </div>
           </div>
         </div>
       </mat-tab>
-      <!-- <mat-tab label="オンライン">
-        <div class="store__grid">
-          <div
-            *ngFor="let store of codeCard.storeIds | idToStore: 'online'"
-            class="store__cover"
-          >
-            <div class="store__img-wrapper">
-              <img
-                class="store__img"
-                src="assets/images/{{ store.id }}.png"
-                alt="オンライン店舗の画像"
-              />
+      <mat-tab label="オンライン">
+        <div
+          *ngFor="let category of codeCard.storeIds | idToStore: 'online'"
+          class="store__cover"
+        >
+          <h3 class="store__category">
+            <span class="store__category-label">{{ category.title }}</span>
+          </h3>
+          <div class="store__grid">
+            <div *ngFor="let item of category.items">
+              <div class="store__img-wrapper">
+                <img
+                  class="store__img"
+                  src="assets/images/{{ item.id }}.png"
+                  alt="オンラインショップの画像"
+                />
+              </div>
+              <span class="store__name">{{ item.name }}</span>
             </div>
-            <span class="store__name">{{ store.name }}</span>
           </div>
         </div>
       </mat-tab>
       <mat-tab label="請求書">
-        <div class="store__grid">
-          <div
-            *ngFor="let store of codeCard.storeIds | idToStore: 'invoice'"
-            class="store__cover"
-          >
-            <div class="store__img-wrapper">
-              <img
-                class="store__img"
-                src="assets/images/{{ store.id }}.png"
-                alt="請求書の画像"
-              />
+        <div
+          *ngFor="let category of codeCard.storeIds | idToStore: 'invoice'"
+          class="store__cover"
+        >
+          <h3 class="store__category">
+            <span class="store__category-label">{{ category.title }}</span>
+          </h3>
+          <div class="store__grid">
+            <div *ngFor="let item of category.items">
+              <div class="store__img-wrapper">
+                <img
+                  class="store__img"
+                  src="assets/images/{{ item.id }}.png"
+                  alt="請求書の画像"
+                />
+              </div>
+              <span class="store__name">{{ item.name }}</span>
             </div>
-            <span class="store__name">{{ store.name }}</span>
           </div>
         </div>
-      </mat-tab> -->
+      </mat-tab>
     </mat-tab-group>
   </div>
 </ng-container>
