--- a/src/app/electron-detail/electron-detail/electron-detail.component.html
+++ b/src/app/electron-detail/electron-detail/electron-detail.component.html
@@ -55,7 +55,7 @@
           *ngFor="let category of electronCard.storeIds | idToStore: 'real'"
           class="store__cover"
         >
-          <h3 class="store__category">
+          <h3 *ngIf="category.items.length != 0" class="store__category">
             <span class="store__category-label">{{ category.title }}</span>
           </h3>
           <div class="store__grid">
@@ -77,7 +77,7 @@
           *ngFor="let category of electronCard.storeIds | idToStore: 'online'"
           class="store__cover"
         >
-          <h3 class="store__category">
+          <h3 *ngIf="category.items.length != 0" class="store__category">
             <span class="store__category-label">{{ category.title }}</span>
           </h3>
           <div class="store__grid">
@@ -99,7 +99,7 @@
           *ngFor="let category of electronCard.storeIds | idToStore: 'invoice'"
           class="store__cover"
         >
-          <h3 class="store__category">
+          <h3 *ngIf="category.items.length != 0" class="store__category">
             <span class="store__category-label">{{ category.title }}</span>
           </h3>
           <div class="store__grid">
