--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,6 +67,7 @@ img {
 }
 
 .store {
+  padding: 40px;
   &__title {
     text-align: center;
   }
@@ -78,7 +79,7 @@ img {
     text-align: center;
     display: flex;
     justify-content: center;
-    margin: 40px 24px 24px;
+    margin: 40px 0 24px;
   }
   &__category::before {
     content: '';
@@ -114,9 +115,10 @@ img {
     gap: 24px;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     text-align: center;
-    padding: 24px;
+    padding: 24px 0;
   }
   @include sp {
+    padding: 16px 0;
     &__grid {
       grid-template-columns: repeat(3, 1fr);
     }
