--- a/src/app/code-detail/code-detail/code-detail.component.html
+++ b/src/app/code-detail/code-detail/code-detail.component.html
@@ -58,10 +58,10 @@
             *ngFor="let category of codeCard.storeIds | idToStore: 'real'"
             class="store__cover"
           >
-            <h3 *ngIf="category.items.length != 0" class="store__category">
+            <h3 *ngIf="category.items.length" class="store__category">
               <span class="store__category-label">{{ category.title }}</span>
             </h3>
-            <div class="store__grid">
+            <div *ngIf="category.items.length" class="store__grid">
               <div *ngFor="let item of category.items">
                 <div class="store__img-wrapper">
                   <img
